crates/data-dict/tests/snapshots/validate_data__duplicate_values_withheld_when_restricted.snap
---
source: crates/data-dict/tests/validate_data.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    source:
      parquet: data.parquet
    columns:
      - name: email
        type: string
        constraints: [unique]
        examples: ['x@example.com']
        display: restricted
────────────────────────────────────────
error[D02]: A unique column must not contain duplicate values.
  --> dict.yaml:10:23
   |
LL |   - name: t
...
LL |       - name: email
LL |         type: string
LL |         constraints: [unique]
   |                       ^^^^^^ has 1 repeated occurrence (values restricted; row: 2)
