crates/data-dict/tests/snapshots/validate_data__every_offending_enum_row_reports_its_value.snap
---
source: crates/data-dict/tests/validate_data.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    source:
      parquet: data.parquet
    columns:
      - name: status
        type: enum
        values: [active]
────────────────────────────────────────
error[D04]: An enum column's values must all be among its declared `values`.
  --> dict.yaml:10:17
   |
LL |   - name: t
...
LL |       - name: status
LL |         type: enum
LL |         values: [active]
   |                 ^^^^^^^^ has 3 values outside the allowed set (`sleepy`, `grumpy`; rows: 2, 3, 4)
